--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
 
 @tailwind components;
 @tailwind utilities;
 
+$theme: mat.define-theme(
+  (
+    color: (
+      theme-type: light,
+      primary: mat.$cyan-palette,
+      tertiary: mat.$orange-palette,
+    ),
+  )
+);
+
 html,
 body {
   height: 100%;
+  @include mat.all-component-themes($theme);
 }
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+@include mat.core();
+@include mat.color-variants-backwards-compatibility($theme);
